log
Thu 09 May 2024 03:20:36 PM UTC: 
 tests:  1|8
total_score: 0/70
c0a4a0b
Thu 09 May 2024 03:28:03 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
fee5a0a
Thu 09 May 2024 03:31:39 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:43: error: expected ‘)’ before ‘{’ token
   76 |     if(is_equal(tree, key, aux->pair->key){
      |       ~                                   ^
      |                                           )
treemap.c:81:3: error: expected expression before ‘}’ token
   81 |   }
      |   ^
treemap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b308d53
